[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="server"
path="src/server.rs"

[[bin]]
name="client"
path="src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = "0.1"
futures-core = "0.3"
futures-util = "0.3"

async-stream = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.7"


